<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/cream">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createName"
        android:layout_weight="0.04"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/nameHint"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createPhone"
        android:layout_weight="0.04"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/phoneHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createRelationship"
        android:layout_weight="0.04"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/relationshipHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createBirthday"
        android:layout_weight="0.04"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/birthdayHint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createContact"
        android:id="@+id/createButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/purple"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp" />
</LinearLayout>